# atlas

./: .env.example  .gitignore  ARCHITECTURE.md  COST.md  DEMO.md  README.md  ROADMAP.md  docker-compose.yml
.github/workflows/: ci.yml
ai/: README.md  __init__.py  config.py  pyproject.toml  service.py
ai/agents/: evaluation.py  orchestrator.py
ai/atlas_ai_services.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
ai/examples/: simulate_agent.py
ai/prompts/: atlas_assistant.md
ai/services/: __init__.py  core_client.py
ai/tests/: test_orchestrator.py
ai/vector_search/: cache.py  client.py  ingest.py
ai/workflows/: hitl.py
automation/: README.md
automation/playbooks/: README.md
automation/workflows/: n8n-hitl.md
core/: README.md
core/api/: Dockerfile  README.md  alembic.ini  pyproject.toml
core/api/alembic/: env.py
core/api/alembic/versions/: 20241110_0001_init.py  20241110_0002_usage_events.py  20241110_0003_admin_user.py
core/api/app/: __init__.py  config.py  database.py  dependencies.py  main.py  models.py  security.py  telemetry.py
core/api/app/routers/: auth.py  billing.py  health.py  metrics.py  tenants.py  webhooks.py
core/api/app/services/: __init__.py  auth.py  metrics.py  tenants.py
core/api/atlas_core_api.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
core/api/tests/: test_health.py
data/: README.md  sample_fct_ai_context.json
data/feature-store/: tenant_context.yaml
docs/: README.md  ai-integration.md
frontend/: Dockerfile  README.md  next.config.mjs  package-lock.json  package.json  tsconfig.json
infra/: README.md
(+38 files in other folders)
